Adjust UI. Add Face Enhance option. Fix the issue that occurs when using PNG format images.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,11 +4,10 @@
     ,"file_filter_type_gif_video":"GIF and Video"
     ,"add_folder":"Add Folder"
     ,"parent_folder":"Parent Folder"
-    ,"show_in_file_explorer":"Show in File Explorer"
+    ,"reveal_in_file_explorer":"Show in File Explorer"
     ,"refresh":"Refresh"
     ,"detect_faces":"Detect Faces"
     ,"video":"Video"
-    ,"open_folder":"Open Folder"
     ,"executing":"Executing"
     ,"try_to_read_service_port_from_file":"Try to read service port from file:{path}"
     ,"using_port_read_from_file":"Using port read from file：{port}"
@@ -16,4 +15,11 @@
     ,"log":"Log"
     ,"generating":"Generating"
     ,"generate":"Generate"
+    ,"settings":"Settings"
+    ,"face_enhance":"Enhance"
+    ,"close":"Close"
+    ,"source":"Source"
+    ,"target":"Target"
+    ,"result":"Result"
+    ,"delete":"Delete"
 }
