--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -4,11 +4,10 @@
     ,"file_filter_type_gif_video":"GIF和视频"
     ,"add_folder":"添加文件夹"
     ,"parent_folder":"上层文件夹"
-    ,"show_in_file_explorer":"在资源管理器中显示"
+    ,"reveal_in_file_explorer":"在资源管理器中显示"
     ,"refresh":"刷新"
     ,"detect_faces":"识别人脸"
     ,"video":"视频"
-    ,"open_folder":"打开文件夹"
     ,"executing":"执行中"
     ,"try_to_read_service_port_from_file":"尝试从文件读取服务端口:{path}"
     ,"using_port_read_from_file":"使用从文件读取到的端口：{port}"
@@ -16,4 +15,11 @@
     ,"log":"日志"
     ,"generating":"生成中"
     ,"generate":"生成"
+    ,"settings":"设置"
+    ,"face_enhance":"增强"
+    ,"close":"关闭"
+    ,"source":"源"
+    ,"target":"目标"
+    ,"result":"结果"
+    ,"delete":"删除"
 }
