Optimized the code. Added Options and Settings functionality. Implemented NSFW detection. Adjusted cache directory structure. Made some UI interface adjustments.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -22,4 +22,17 @@
     ,"target":"Target"
     ,"result":"Result"
     ,"delete":"Delete"
+    ,"options":"Options"
+    ,"keep_fps":"Keep FPS"
+    ,"audio":"Audio"
+    ,"keep_frames":"Keep frames folder"
+    ,"min_similarity":"Video facial minimum similarity:"
+    ,"output_video_encoder":"Video Encoder:"
+    ,"output_video_quality":"Video Quality:"
+    ,"temp_frame_format":"Frame Format:"
+    ,"temp_frame_quality":"Frame Quality:"
+    ,"set_as_default":"Set as Default"
+    ,"provider_desc":"Drag the labels to adjust the order, with higher priority as they move to the left."
+    ,"execution_providers":"Execution Providers:"
+    ,"execution_threads":"Execution Threads:"
 }
