--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -22,4 +22,17 @@
     ,"target":"目标"
     ,"result":"结果"
     ,"delete":"删除"
+    ,"options":"选项"
+    ,"keep_fps":"保持FPS"
+    ,"audio":"音频"
+    ,"keep_frames":"保留序列帧文件夹"
+    ,"min_similarity":"视频脸部最小相似度："
+    ,"output_video_encoder":"视频编码："
+    ,"output_video_quality":"视频编码质量："
+    ,"temp_frame_format":"序列帧格式："
+    ,"temp_frame_quality":"序列帧质量："
+    ,"set_as_default":"设为默认"
+    ,"provider_desc":"拖动标签调整顺序，越往左优先级越高。"
+    ,"execution_providers":"执行提供程序："
+    ,"execution_threads":"执行线程数："
 }
